# sticks

./: .gitattributes  .gitignore  ARCHITECTURE.md  ARTIFACT_MANIFEST.md  MANIFEST.md  PUBLIC_REPOSITORY_SCOPE.md  README.md  README_MULTI_VM.md  REPRODUCIBILITY.md  REVIEWER_GUIDE.md  Vagrantfile  apply_sut_profile.py  multi_vm_manager.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_review_check.sh  run_vm_backed_campaign.sh  setup.sh  vagrant-multi.sh  vagrant-wrapper.sh
ACM CCS - Paper 2/: main.tex  references.bib  references_official_downloaded.bib  used_citations_only.bib
artifact/: artifact_up.sh  run.sh  setup.sh  teardown.sh  validate.sh
campaigns/: 0.apt41_dust.json  0.apt41_dust_full.json  0.c0010.json  0.c0011.json  0.c0012.json  0.c0013.json  0.c0015.json  0.c0017.json  0.c0026.json  0.costaricto.json  0.operation_midnighteclipse.json  0.outer_space.json  0.salesforce_data_exfiltration.json  0.shadowray.json
data/: cve_resolution_rules.yml
docs/: ARCHITECTURE_FREEZE.md  CAMPAIGN_EXPANSION_TO10.md  CANONICAL_STRUCTURE.md  IAC_LIMITATIONS_ARM64.md  LEGACY_CLEANUP_CANDIDATES.md  LEGACY_REMOVAL_RECORD.md  README.md  README_REALISTIC.md  WINDOWS_FIDELITY_CLASSIFICATION.md  architecture.md  artifact_evaluation.md  artifact_guide.md  methodology.md  reproducibility.md  reviewer_quickstart.md  validation_report.md
infra/: README.md  Vagrantfile  status_report.txt  topology.yaml
lab/: health_check.py
measurement/: GIT_READY_MANIFEST.md  MEASUREMENT_DOD.md  PUBLISHING_CHECKLIST.md
release/: CAMPAIGN_SUT_FIDELITY_MATRIX.md  CLAIMS_EVIDENCE_MATRIX.md  CLAIMS_FOR_PAPER.md  CLAIM_EVIDENCE_TRACEABILITY.md  COVERAGE_MATRIX.md  CVE_RESOLUTION_CANDIDATES.md  PAPER_READY_SUMMARY.md  (+20 more)
(+549 files in other folders)
